  CYCLADES_SERVERS_FQDN to set the template for servers FDQN.
* Extend servers info API response with 'SNF:port_forwarding' attribute,
  describing port fowarding rules (DNAT) that are applied to vms. The
  description of such rules is done via the new CYCLADES_PORT_FORWARDING
  setting.
* Change --dhcp option of network management commands from a flag to a boolean
  value, e.g. --dhcp=True

Pithos
------

* Refactor metadata schema (table attributes) in Pithos DB to speedup current
objects by domain attribute. This is used by Plankton for listing VM images.

* Enforce container-level atomicity in (most) Pithos API calls.


.. _Changelog-0.14.7:

v0.14.7
=======

Released: Wed Sep 18 17:50:12 EEST 2013

Cyclades
--------

* Fix bug in helpdesk view

.. _Changelog-0.14.6:

v0.14.6
=======

Released: Wed Sep 18 16:18:58 EEST 2013

Pithos
------

* Substitute the PITHOS_BACKEND_QUOTA setting with two
  distinct settings: PITHOS_BACKEND_ACCOUNT_QUOTA &
  PITHOS_BACKEND_CONTAINER_QUOTA
* Set PITHOS_BACKEND_CONTAINER_QUOTA default value to 0 (unlimited)
* Fix bug that resulted in DB deadlocks.

Cyclades
--------

* Fix bug in snf-dispatcher that resulted in servers to be deleted from the
  DB even if the corresponding Ganeti job failed.

Branding
--------

* Add new BRANDING_FOOTER_EXTRA_MESSAGE setting.


.. _Changelog-0.14.5:

v0.14.5
=======

Released: Wed Aug  7 11:19:49 EEST 2013

Pithos
------

* Fix security issue with handling Pithos versions.


.. _Changelog-0.14.4:

v0.14.4
=======

Released: Mon Jul 29 12:24:22 EEST 2013

Pithos
------

* Fix bug in reconcile resources management command.


.. _Changelog-0.14.3:

v0.14.3
=======

Released: Thu Jul 25 12:22:47 EEST 2013

Synnefo-wide
------------

* Use the SYNNEFO_TRACE environmental variable to control whether the greenlet
  tracing code will get loaded or not.
* Split the HIDDEN_COOKIES setting in HIDDEN_HEADERS and HIDDEN_COOKIES, and
  add the MAIL_MAX_LEN setting, to limit the mail size for unhandled